VERSION 1.0.0
------------------------
 o initial version with the following functions implemented:

   + convertToMSnset
   + summarizeIntensities
   + normalizeQuantiles
   + normalizeScaling
   + groupScaling
   + regressIntensity
   + computeDiffStats
   + getContrastResults
   + assignColours
   + intensityPlot
   + peptideIntensityPlot
   + pcaPlot
   + maPlot
   + corrPlot
   + hierarchicalPlot
   + plotMeanVar
   + coveragePlot

  
