@@ -2,7 +2,7 @@ Package: qPLEXanalyzer
 Type: Package
 Title: Tools for qPLEX-RIME data analysis
 Version: 1.0.2
-Date: 2018-03-07
+Date: 2018-03-08
 Author: Matt Eldridge, Kamal Kishore, Ashley Sawle
 Maintainer: Kamal Kishore <kamal.fartiyal84@gmail.com>
 Description: Tools for quantitative proteomics data analysis generated from qPLEX-RIME method.
