@@ -231,7 +231,7 @@ A statistical analysis for the identification of differentially regulated or bou
 
 The qPLEX-RIME experiment can consist of IgG mock samples to discriminate non-specific binding. The controlGroup argument within \Rfunction{getContrastResults} function allows you to specify this group (such as IgG). It then uses the mean intensities from the fitted linear model to compute log2 fold change between IgG and each of the groups. The maximum log2 fold change over IgG control from the two groups being compared is reported in the controlLogFoldChange column. This information can be used to filter non-specific binding. A controlLogFoldChange more than 1 can be used as a filter to discover specific interactors.
 
-The results of the differential protein analysis can be visualized using \Rfunction{maPlot} function. It plots average log2 protein intensity to log2 fold change between groups compared. This enables quick visualization (Figure 10) of significantly changing proteins between groups. However, user could also view  differential protein results in a volcano plot (Figure 11) to compare the size of the fold change to the statistical significance level.
+The results of the differential protein analysis can be visualized using \Rfunction{maVolPlot} function. It plots average log2 protein intensity to log2 fold change between groups compared. This enables quick visualization (Figure 10) of significantly changing proteins between groups. \Rfunction{maVolPlot} could also be used to view differential protein results in a volcano plot (Figure 11) to compare the size of the fold change to the statistical significance level.
 
 \begin{center}
 <<diffexp,fig.width=5,fig.height=4,out.width='.85\\textwidth', fig.cap="MA plot of the quantified proteins", message=FALSE,cache=TRUE,fig.asp=0.65>>=
