@@ -7,15 +7,18 @@ VERSION 1.0.0
    + normalizeQuantiles
    + normalizeScaling
    + groupScaling
+   + rowScaling
    + regressIntensity
    + computeDiffStats
    + getContrastResults
    + assignColours
    + intensityPlot
+   + intensityBoxplot
    + peptideIntensityPlot
    + pcaPlot
-   + maPlot
+   + maVolPlot
    + corrPlot
+   + rliPlot
    + hierarchicalPlot
    + plotMeanVar
    + coveragePlot
